fix more components for dark mode

--- a/tempera-server/webapp/src/app/groupManagement/group-details/group-details.component.css
+++ b/tempera-server/webapp/src/app/groupManagement/group-details/group-details.component.css
@@ -15,7 +15,6 @@
 }
 
 .members-table th {
-  background-color: #f4f4f4;
   text-align: left;
 }
 
