--- a/tempera-server/webapp/src/app/projectManagement/project-details/project-details.component.css
+++ b/tempera-server/webapp/src/app/projectManagement/project-details/project-details.component.css
@@ -27,7 +27,6 @@
 }
 
 .groups-table th {
-  background-color: #f4f4f4;
   text-align: left;
 }
 
